samples/_failures_safe/1761394181_ca7301_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a813af6.c: In function ‘main’:
./samples/SAFE/__tmp_8a813af6.c:141:5: error: expected declaration or statement at end of input
  141 |     if (scanf("%hhu", &params.level) != 1) {
      |     ^~
./samples/SAFE/__tmp_8a813af6.c:141:5: error: expected declaration or statement at end of input
